2006-01-02  Jordi Mallach  <jordi@sindominio.net>

	* ui/main.glade, ui/prefs.glade: Fix two newly introduced typos.
	Fixes #325335.
	Fix "completly" and "seperate" typos.

	* configure.ac: Update again, but do it right this time.

2005-12-31  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: Revert to AC_OUTPUT. Generated Makefiles are sometimes
	useful.

2005-12-29  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: GTK_REQUIRED=2.6.0, for GtkAboutDialog.

2005-12-29  Jordi Mallach  <jordi@sindominio.net>

	* Migration of gnome-mud-manual to gnome-doc-utils.
	* configure.ac: Add required changes for gnome-doc-utils.
	Make MCCP the default if zlib is present, warn if not.
	General cleanups.
	* Makefile.am: Add gnome-doc-utils stuff to DISTCLEANFILES,
	--disable-scrollkeeper to DISTCHECK_CONFIGURE_FLAGS.
	* doc/gnome-mud-manual/Makefile.am: Add gnome-doc-utils support.
	* doc/gnome-mud-manual/C/Makefile.am: Removed.
	* doc/gnome-mud-manual/gnome-mud-manual.omf.in: New, created from
	the old	omf file.
	* doc/gnome-mud-manual/C/gnome-mud-manual.omf: Removed.
	* doc/gnome-mud-manual/C/gnome-mud-manual.xml: Updated. Real content
	update will follow...
	* doc/Makefile.ac, configure.ac: Ignore the doc/gnome-mud-plugin-api
	and omf-install dirs, as the python plugin API is not available now,
	and omf-install is obsolete.
	* doc/omf-install: Removed.
	* doc/xmldocs.make: Removed.

	* .cvsignore, doc/gnome-mud-manual/.cvsignore: Updated.

2005-12-29  Robin Ericsson  <lobbin@localhost.nu>

	* src/mud-connection-view.c: Fixed the resize thing I broke earlier
	today :).

2005-12-29  Les Harris  <lescom@comcast.net>

	* src/mud-window.c, ui/main.glade: Added resizable entry widget
	support.

2005-12-29  Jordi Mallach  <jordi@sindominio.net>

	* ui/main.glade, ui/prefs.glade: Replace "colour" with "color", per
	GNOME guidelines. Fixes #325103.

2005-12-29  Robin Ericsson  <lobbin@localhost.nu>

	* src/mud-window.c (mud_window_about_cb), main.glade: Applied new